Deleted all old code

--- a/Templates/predict.html
+++ b/Templates/predict.html
@@ -8,7 +8,7 @@
 <body>
     <form>
         <p>
-            Enter your value for Madagascar
+            Enter your review for Madagascar
             <br>
         </p>
         <input type="text" name="user_review">
