--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,5 @@
+<!-- Basic html to demo use of render templates-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,15 +8,10 @@
 </head>
 
 <body>
-    <form>
-        <p>
-            Enter your review for Madagascar
-            <br>
-        </p>
-        <input type="text" name="input_val">
-        <input type="submit" value="Submit">
-    </form>
 
+    <p>
+        Hello World!!
+    </p>
 
 </body>
 </html>
